# openamundsen

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  pypi-release.yml
doc/: conf.py  index.rst
openamundsen/: __init__.py  cli.py  conf.py  constants.py  dataio.py  forcing.py  heatconduction.py  interpolation.py  landcover.py  liveview.py  logformat.py  meteo.py  model.py  modelinit.py  snowmodel.py  statevars.py  surface.py  terrain.py  tridiag.py  util.py
openamundsen/data/: configschema.yml  defaultconfig.yml  land_cover_class_params.yml  land_cover_class_schema.yml
openamundsen/errors/: __init__.py
openamundsen/fileio/: __init__.py  fieldoutput.py  griddedoutput.py  meteo.py  pointoutput.py  raster.py
openamundsen/meteo/: __init__.py  atmosphere.py  interpolation.py  precipcorr.py
openamundsen/modules/: __init__.py
openamundsen/modules/canopy/: __init__.py  canopy.py
openamundsen/modules/evapotranspiration/: __init__.py  evapotranspiration.py  landcover.py  soiltexture.py
openamundsen/modules/glacier/: __init__.py  glaciermodel.py
openamundsen/modules/radiation/: __init__.py  clearsky.py  irradiance.py  potential.py  shadows.py  sunparams.py
openamundsen/modules/snow/: __init__.py  albedo.py  compaction.py  cryolayermodel.py  cryolayers.py  energybalance.py  init.py  layermodel.py  multilayermodel.py  snow.py  snowfall.py
openamundsen/modules/soil/: __init__.py  init.py  soil.py
tests/: compare.py  conftest.py  plot.py  test_canopy.py  test_cli.py  test_cloudiness.py  test_config.py  test_evapotranspiration.py  test_gridded_output.py  test_gridoutput.py  test_interpolation.py  test_logging.py  test_meteo.py  test_meteo_input.py  test_model.py  test_multiprocessing.py  test_numerical.py  test_point_output.py  test_radiation.py  test_raster_input.py  test_snow.py  test_terrain.py  test_tridiag.py
