[metadata]
name = openamundsen
author = openAMUNDSEN Developers
author_email = florian.hanzer@gmail.com
description = Modular snow and hydroclimatological modeling framework
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE
url = https://github.com/openamundsen/openamundsen
platforms = any

classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.7
zip_safe = False
include_package_data = True
packages = find:

install_requires =
    cerberus
    importlib-metadata; python_version < "3.8"
    loguru
    munch
    netCDF4
    numba >= 0.50.1
    numpy
    pandas >= 1.1.0
    pyproj
    setuptools_scm
    scipy
    ruamel.yaml >= 0.15.0
    rasterio >= 1.1.0
    xarray >= 0.14.0

[options.extras_require]
liveview =
    matplotlib >= 3.0.0
    PyQt5 >= 5.12

test =
    pooch
    pytest
    pytest-lazy-fixture
    pvlib

docs =
    sphinx
    sphinx_rtd_theme

[options.entry_points]
console_scripts =
    openamundsen = openamundsen.cli:main
